# accounting-cli

./: .gitignore  README.md  ROADMAP.md  journal.md  main.py  project_report.md  pyproject.toml  sample_financial_prototype.html
backend/: README.md  pyproject.toml
backend/scripts/: generate-frontend-client.sh
backend/src/: main.py
backend/tests/: conftest.py  test_api_company.py  test_api_expenses.py  test_api_inventory.py  test_api_ledger.py  test_api_parties.py  test_api_purchases.py  test_api_quotations.py  test_api_sales.py  test_company_service.py  test_expense_service.py  test_inventory_repository.py  test_inventory_service.py  test_ledger_service.py  test_mock_injection.py  test_parties_service.py  test_purchase_service.py  test_quotation_service.py  test_report_service.py  test_sale_repository.py  test_sale_service.py
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
scripts/: prep_for_chatgpt.sh
solid-frontend/: .env.example  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
src/: container.py  main.py
tests/: conftest.py  test_api_company.py  test_api_expenses.py  test_api_inventory.py  test_api_ledger.py  test_api_parties.py  test_api_purchases.py  test_api_quotations.py  test_api_sales.py  test_company_service.py  test_expense_service.py  test_inventory_repository.py  test_inventory_service.py  test_ledger_service.py  test_mock_injection.py  test_parties_service.py  test_purchase_service.py  test_quotation_service.py  test_report_service.py  test_sale_repository.py  test_sale_service.py
(+171 files in other folders)
