[project]
name = "cli-acc-mod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]

[project.scripts]
printos = "main:app"

[tool.pytest.ini_options]
pythonpath = "src"
